# flex-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  LICENSE  MANIFEST.in  README.md  dprint.json  pdm_build.py  pyproject.toml  setup.cfg  setup.py  taskfile.yaml
.github/: renovate.json
.github/workflows/: _build_wheel.yaml  build.yaml  build.yml  release.yaml  release.yml  style.yaml  wheels.yml
src/gnu_flex/: __init__.py  paths.py
