[metadata]
name = flex-bin
version = attr: gnu_flex._version.__version__
description = Prebuilt GNU flex binaries packaged for Python
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = flex-bin maintainers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Code Generators
    Topic :: Utilities
keywords = flex, lex, scanner, codegen, binary
url = https://github.com/trim21/flex-bin
project_urls =
    Source = https://github.com/trim21/flex-bin
    Issues = https://github.com/trim21/flex-bin/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
gnu_flex = bin/*

